# bbcat-base

./: .gitignore  CMakeLists-bbcat.txt  CMakeLists.txt  COPYING  Makefile.am  README  aplibs-dsp-uninstalled.pc.in  aplibs-dsp.pc.in  bbcat-base-uninstalled.pc.in  bbcat-base.pc.in  configure.ac  doxygen.cfg
aplibs-dsp/: 3DPosition.cpp  3DPosition.h  ByteSwap.cpp  ByteSwap.h  Convolver.cpp  Convolver.h  Convolver.hpp  ConvolverFFT.cpp  ConvolverFFT.hpp  Crossfader.cpp  Crossfader.hpp  FractionalDelay.cpp  FractionalDelay.hpp  FractionalSample.cpp  FractionalSample.h  Logging.hpp  Makefile.am  ParameterSet.cpp  ParameterSet.h  PerformanceMonitor.cpp  PerformanceMonitor.h  PositionCursor.h  SOFA.cpp  SOFA.h  SoundDelayBuffer.cpp  SoundDelayBuffer.h  SoundFormatConversions.cpp  SoundFormatConversions.h  SoundFormatRawConversions.cpp  SoundFormatRawConversions.h  SoundMixing.cpp  SoundMixing.h  ThreadLock.cpp  ThreadLock.h  VBAPanner.cpp  VBAPanner.h  VBAPanner2D.cpp  VBAPanner2D.h  genconversions.php  misc.cpp  (+1 more)
bbcat-common/: CMakeLibrary.txt  CMakeProject.txt  Config.cmake.in  FindThreads.cmake  findregisterfunctions.sh  pkgconfig.in  register.cpp.in
debian/: changelog  control  libbbcat-base-dev.install  libbbcat-base.install  rules
docs/: main.md  object_creation.md
share/: licences.txt
src/: 3DPosition.cpp  3DPosition.h  BackgroundFile.cpp  BackgroundFile.h  ByteSwap.cpp  ByteSwap.h  CMakeLists-src.txt  CMakeLists.txt  CallbackHook.h  Config.cmake.in  ConfigVersion.cmake.in  Convolver.cpp  Convolver.h  Crossfader.cpp  Crossfader.hpp  DistanceModel.cpp  DistanceModel.h  EnhancedFile.cpp  EnhancedFile.h  FractionalSample.cpp  FractionalSample.h  Interpolator.h  LoadedVersions.cpp  LoadedVersions.h  LockFreeBuffer.h  Logging.hpp  Makefile.am  NamedParameter.cpp  NamedParameter.h  OSCompiler.h  ObjectRegistry.cpp  ObjectRegistry.h  ParameterSet.cpp  ParameterSet.h  PerformanceMonitor.cpp  PerformanceMonitor.h  PositionCursor.h  RefCount.h  SOFA.cpp  SOFA.h  (+36 more)
test/: CMakeLists.txt  Makefile.am  jsontests.cpp  stringfromtests.cpp  testbase.cpp
